fix(front): rearrange z-index of QuestionAnony page & delete profile box in the page

--- a/ringcard_frontend/src/styles/layout/headerNoProfile.css
+++ b/ringcard_frontend/src/styles/layout/headerNoProfile.css
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: column;
 
-  z-index: 1000;
+  z-index: 1100;
+
+  background-image: linear-gradient(to bottom, #6979ae, #7680b2);
 
 }
